# Garland

./: .gitignore  CMakeLists.txt  README.md  compile.sh  partitions.csv  sdkconfig.defaults
files/: index.html  ota.html  scripts.js  styles.css
main/: CMakeLists.txt  EspNowTimeSync.cpp  EspNowTimeSync.h  Garland.cpp  Garland.h  MqttManager.cpp  MqttManager.h  SunTimeManager.cpp  SunTimeManager.h  WebServerManager.cpp  WebServerManager.h  WifiManager.cpp  WifiManager.h  idf_component.yml  main.cpp
